@@ -2,5 +2,5 @@ package hamt_go
 
 const (
 	VERSION      = "0.4.0"
-	VERSION_DATE = "2014-04-23"
+	VERSION_DATE = "2014-04-25"
 )
